Revision history for Perl extension DBIx::Skinny

0.0716
   2010-08-XX
        - FIXED : _guess_table_name support multiline sql (thanks nihen)

0.0715
   2010-07-26
        - MOD : do method can take \%attr, @bind_params ( It's the same as DBI's "do" behavior ) (thanks tokuhirom)
        - MOD : single/search method can select..for update.

0.0714
   2010-07-06
        - MOD : The setting method of Schema#pk is enhanced bug fixed. (thanks gfx)

0.0713
   2010-07-06
        - MOD : The setting method of Schema#pk is enhanced. (thanks tokuhirom)

0.0712
   2010-06-29
        - MOD : added method search_rs. Return DBIx::Skinny::SQL's object. (thanks walf443)
        - MOD : add fork safe dbh handling (thanks nihen)
        - ADD : DBIx::Skinny::SQL's docs (thanks walf443)
        - ADD : add_complex_where's test (thanks walf443)
        - ADD : DBIx::Skinny::Manual::EN (thanks metaperl)
        - FIXED : t/218_transaction_mysql.t's typo (thanks nihen)

0.0711
   2010-05-16
        - FIXED : typo s/realy/really/ (thanks azumakuniyuki)
        - FIXED : typo s/potition/position/g (thanks azumakuniyuki)
        - FIXED : bind_param bug fixed.

0.0710
   2010-04-22
        - MOD : support bind_param.
        - MOD : add replace method.
        - INCOMPATIBLE MOD: pre_insert and post_insert trigger should not work in bulk_insert. mysql driver does not effect this change. (walf443)
        - fix typo s/alreay/already/ ( magicalhat++ )
        - FIXED: loose connect_options after new (thanks yibe)

0.0709
   2010-04-20
        - FIXED: check get_column argument and check no select column case (walf443)
        - FIXED: typo fixed. s/coddnnect_options/connect_options/. (thanks yibe)

0.0708
   2010-04-07
        - FIXED: s/is not exist/dose not exist/g (thanks azumakuniyuki and mizzy)
        - FIXED: fetch data for find_or_create. (walf443) 
        - FIXED: SQL function was able to be used by add_where method. 

0.0707
   2010-04-05