@@ -3,6 +3,7 @@ Revision history for Perl extension DBIx::Skinny
 0.0716
    2010-08-XX
         - FIXED : _guess_table_name support multiline sql (thanks nihen)
+        - ADD   : Added position accessor to Iterator (thanks nihen)
 
 0.0715
    2010-07-26
